Integrate review feedback

--- a/docs/operators/read_syslog.mdx
+++ b/docs/operators/read_syslog.mdx
@@ -78,7 +78,7 @@ Employs "octet counting" according to [RFC6587](https://datatracker.ietf.org/doc
 to determine message boundaries instead of the parsing heuristic for multi-line
 messages.
 
-Defaults to `false`
+Defaults to `false`.
 
 <ParsingOptions />
 
