--- a/docs/operators/to_splunk.mdx
+++ b/docs/operators/to_splunk.mdx
@@ -41,9 +41,9 @@ for authentication.
 
 ### `event = any (optional)`
 
-The event to send. By default, the entire input event is send.
+The event to send.
 
-Defaults to `this`.
+Defaults to `this`, meaning the entire event is sent.
 
 ### `host = string (optional)`
 
@@ -119,7 +119,6 @@ read_json
 to_splunk "https://localhost:8088", hec_token=secret("splunk-hec-token")
 ```
 
-
 ### Data Dependent Splunk framing
 
 By default, the `to_splunk` operator sends the entire event as the `event` field
@@ -139,7 +138,7 @@ from {
   host: "my-host",
   source: "my-source",
   a: 42,
-  b: 0
+  b: 0,
   message: "text",
   nested: { x: 0 },
 }
@@ -149,8 +148,7 @@ this = { event: this }
 
 // hoist the splunk specific fields back out, so they are no longer part of the
 // sent event
-move host = event.host,
-  source = event.source
+move host = event.host, source = event.source
 
 to_splunk "https://localhost:8088",
   hec_token=secret("splunk-hec-token"),
