--- a/docs/operators/load_tcp.mdx
+++ b/docs/operators/load_tcp.mdx
@@ -8,7 +8,8 @@ Loads bytes from a TCP or TLS connection.
 
 ```tql
 load_tcp endpoint:string, [parallel=int, peer_field=field, tls=bool,
-                           cacert=string, certifle=string,
+                           cacert=string, certfile=string, keyfile=string,
+                           tls_client_ca=string, tls_require_client_cert=bool,
                            max_buffered_chunks=int { … }]
 ```
 
@@ -37,6 +38,21 @@ endpoint of the respective TCP connection into the specified field at the end of
 the nested pipeline.
 
 <TLSOptions tls_default="false"/>
+
+### `tls_client_ca = string (optional)`
+
+Path to a CA certificate file for validating client certificates (server mode only).
+When set along with `tls_require_client_cert`, the server will verify client
+certificates against this CA.
+
+### `tls_require_client_cert = bool (optional)`
+
+Require clients to present valid certificates (server mode only). When enabled,
+clients MUST present a certificate signed by the CA specified in `tls_client_ca`,
+otherwise the connection will be rejected. This enables mutual TLS (mTLS)
+authentication.
+
+Defaults to `false`.
 
 ### `max_buffered_chunks = int (optional)`
 
@@ -93,4 +109,35 @@ You can test the endpoint locally by issuing a TLS connection:
 
 ```bash
 openssl s_client 127.0.0.1:4000
+```
+
+### Listen with mutual TLS (mTLS) authentication
+
+Require clients to present valid certificates signed by a trusted CA:
+
+```tql
+load_tcp "0.0.0.0:4000", tls=true, certfile="server.pem", keyfile="server-key.pem", tls_client_ca="ca.pem", tls_require_client_cert=true {
+  read_json
+}
+```
+
+Generate test certificates:
+
+```bash
+# Create CA
+openssl req -x509 -new -newkey rsa:2048 -nodes -keyout ca-key.pem -out ca.pem -days 365 -subj "/CN=Test CA"
+
+# Create server certificate
+openssl req -new -newkey rsa:2048 -nodes -keyout server-key.pem -out server.csr -subj "/CN=localhost"
+openssl x509 -req -in server.csr -CA ca.pem -CAkey ca-key.pem -CAcreateserial -out server.pem -days 365
+
+# Create client certificate
+openssl req -new -newkey rsa:2048 -nodes -keyout client-key.pem -out client.csr -subj "/CN=client"
+openssl x509 -req -in client.csr -CA ca.pem -CAkey ca-key.pem -CAcreateserial -out client.pem -days 365
+```
+
+Test the mTLS connection:
+
+```bash
+openssl s_client -connect 127.0.0.1:4000 -cert client.pem -key client-key.pem -CAfile ca.pem
 ```
