Update http operator to use TLS settings

--- a/docs/operators/load_http.mdx
+++ b/docs/operators/load_http.mdx
@@ -71,6 +71,8 @@ import TLSOptions from '../../.../../../../partials/operators/TLSOptions.mdx';
 
 <TLSOptions tls_default="true"/>
 
+<TLSServerOptions/>
+
 ## Examples
 
 ### Perform an API call and get the response
