--- a/docs/operators/load_tcp.mdx
+++ b/docs/operators/load_tcp.mdx
@@ -39,6 +39,8 @@ the nested pipeline.
 
 <TLSOptions tls_default="false"/>
 
+<TLSServerOptions/>
+
 ### `max_buffered_chunks = int (optional)`
 
 Maximum number of buffered chunks per connection.
