--- a/docs/operators/load_tcp.mdx
+++ b/docs/operators/load_tcp.mdx
@@ -8,7 +8,9 @@ Loads bytes from a TCP or TLS connection.
 
 ```tql
 load_tcp endpoint:string, [parallel=int, peer_field=field, tls=bool,
-                           cacert=string, certfile=string, keyfile=string,
+                           skip_peer_verification=bool, cacert=string,
+                           certfile=string, keyfile=string,
+                           tls_minium_version=string, tls_ciphers=string,
                            tls_client_ca=string, tls_require_client_cert=bool,
                            max_buffered_chunks=int { … }]
 ```
