--- a/docs/operators/save_email.mdx
+++ b/docs/operators/save_email.mdx
@@ -8,9 +8,7 @@ Saves bytes through an SMTP server.
 
 ```tql
 save_email recipient:str, [endpoint=str, from=str, subject=str, username=str,
-      password=str, authzid=str, authorization=str, tls=bool,
-      skip_peer_verification=bool, cacert=string, certfile=string,
-      keyfile=string, tls_minium_version=string, tls_ciphers=string, mime=bool]
+      password=str, authzid=str, authorization=str, tls=record, mime=bool]
 ```
 
 ## Description
