--- a/docs/operators/save_ftp.mdx
+++ b/docs/operators/save_ftp.mdx
@@ -7,9 +7,7 @@ example: 'save_ftp "ftp.example.org"'
 Saves a byte stream via FTP.
 
 ```tql
-save_ftp url:str [tls=bool, skip_peer_verification=bool, cacert=string,
-                  certfile=string, keyfile=string,
-                  tls_minium_version=string, tls_ciphers=string]
+save_ftp url:str [tls=record]
 ```
 
 ## Description
