--- a/docs/operators/to_opensearch.mdx
+++ b/docs/operators/to_opensearch.mdx
@@ -8,10 +8,7 @@ Sends events to an OpenSearch-compatible Bulk API.
 
 ```tql
 to_opensearch url:string, action=string, [index=string, id=string, doc=record,
-    user=string, passwd=string, tls=bool, skip_peer_verification=bool,
-    cacert=string, certfile=string, keyfile=string,
-    tls_minium_version=string, tls_ciphers=string, include_nulls=bool,
-    max_content_length=int, buffer_timeout=duration, compress=bool]
+    user=string, passwd=string, tls=record]
 ```
 
 ## Description
