--- a/docs/operators/save_http.mdx
+++ b/docs/operators/save_http.mdx
@@ -8,9 +8,7 @@ Sends a byte stream via HTTP.
 
 ```tql
 save_http url:string, [params=record, headers=record, method=string,
-          parallel=int, tls=bool, skip_peer_verification=bool,
-          cacert=string, certfile=string, keyfile=string,
-          tls_minium_version=string, tls_ciphers=string]
+          parallel=int, tls=record]
 ```
 
 ## Description
