--- a/docs/operators/to_clickhouse.mdx
+++ b/docs/operators/to_clickhouse.mdx
@@ -9,10 +9,7 @@ Sends events to a ClickHouse table.
 ```tql
 to_clickhouse table=string, [host=string, port=int, user=string, password=string,
                              mode=string, primary=field,
-                             tls=bool, skip_peer_verification=bool,
-                             cacert=string, certfile=string, keyfile=string,
-                             tls_minium_version=string, tls_ciphers=string,
-                             skip_host_verification=bool]
+                             tls=record]
 ```
 
 ## Description
