--- a/docs/operators/to_fluent_bit.mdx
+++ b/docs/operators/to_fluent_bit.mdx
@@ -8,9 +8,7 @@ Sends events via Fluent Bit.
 
 ```tql
 to_fluent_bit plugin:string, [options=record, fluent_bit_options=record,
-              tls=bool, skip_peer_verification=bool, cacert=string,
-              certfile=string, keyfile=string, tls_minium_version=string,
-              tls_ciphers=string]
+              tls=record]
 ```
 
 ## Description
