--- a/docs/operators/save_email.mdx
+++ b/docs/operators/save_email.mdx
@@ -8,7 +8,9 @@ Saves bytes through an SMTP server.
 
 ```tql
 save_email recipient:str, [endpoint=str, from=str, subject=str, username=str,
-      password=str, authzid=str, authorization=str, tls=record, mime=bool]
+      password=str, authzid=str, authorization=str, tls=bool,
+      skip_peer_verification=bool, cacert=string, certfile=string, keyfile=string,
+      mime=bool]
 ```
 
 ## Description
