--- a/docs/operators/from_fluent_bit.mdx
+++ b/docs/operators/from_fluent_bit.mdx
@@ -9,7 +9,8 @@ Receives events via Fluent Bit.
 ```tql
 from_fluent_bit plugin:string, [options=record, fluent_bit_options=record,
                 schema=string, selector=string, schema_only=bool, merge=bool,
-                raw=bool, unflatten=string, tls=record]
+                raw=bool, unflatten=string, tls=bool, cacert=string,
+                certfile=string, keyfile=string, skip_peer_verification=bool]
 ```
 
 ## Description
