--- a/docs/operators/load_ftp.mdx
+++ b/docs/operators/load_ftp.mdx
@@ -7,7 +7,8 @@ example: 'load_ftp "ftp.example.org"'
 Loads a byte stream via FTP.
 
 ```tql
-load_ftp url:str [tls=record]
+load_ftp url:str [tls=bool, cacert=string, certifle=string,
+                  keyfile=string, skip_peer_verification=bool]
 ```
 
 ## Description
