--- a/docs/operators/to_splunk.mdx
+++ b/docs/operators/to_splunk.mdx
@@ -11,8 +11,9 @@ Sends events to a Splunk [HTTP Event Collector (HEC)][hec].
 ```tql
 to_splunk url:string, hec_token=string,
           [event=any, host=string, source=string, sourcetype=expr, index=expr,
-          print_nulls=bool, max_content_length=int, buffer_timeout=duration,
-          compress=bool, tls=record]
+          tls=bool, cacert=string, certfile=string, keyfile=string,
+          skip_peer_verification=bool, print_nulls=bool, max_content_length=int,
+          buffer_timeout=duration, compress=bool]
 ```
 
 ## Description
